changed references for same directory

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel='stylesheet' href='./css/style.css' type='text/css'>
+  <link rel='stylesheet' href='./style.css' type='text/css'>
   <title>Dogs</title>
 </head>
 <body>
@@ -12,9 +12,9 @@
     <li>Some dogs get bumps on them when they're old.</li>
     <li>Whenever dogs get bumps on them, they will lick them.</li>
   </ul>
-  <img class='coco' src='./images/coco.jpg' alt='a cute little dog'>
-  <video src='./images/coco1.mp4' controls></video>
-  <video src='./images/coco2.mp4' controls></video>
+  <img class='coco' src='./coco.jpg' alt='a cute little dog'>
+  <video src='./coco1.mp4' controls></video>
+  <video src='./coco2.mp4' controls></video>
   <p>What do you call a puppy in a pumpkin costume?</p>
   <p>A <span class='boldMe'>Pup</span>kin</p>
 </body>
